# simple-kafka-example

./: .gitignore  Cargo.toml  README.md
configs/: config.toml
src/: main.rs  setting.rs
src/api/: mod.rs  test_api.rs
