[package]
name = "simple-kafka-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# simple-kafka = "0.0.4" 
simple-kafka = {path = "../simple-kafka"}
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
toml = "0.8.0"
tokio = { version = "1.18.0", features = ["rt", "time", "full"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3",features = ["env-filter", "time", "local-time", ] }
futures = "0.3.28"

actix-web = "4"
time = { version = "0.3.7", features = ["macros"] }
log = "0.4"
fern = "0.6.1"
chrono = {version="0.4.23",features = ["serde"]} # 时间库
